hphp/test/zend/good/ext/gd/tests/imageantialias_error1.php.skipif
<?php 
if (!extension_loaded("gd")) die("skip GD not present");
if (!GD_BUNDLED) die("skip requires bundled GD library\n");
?>