hphp/test/zend/bad/ext/phar/tests/phar_oo_002U.php.skipif
<?php
if (!extension_loaded("phar")) die("skip");
if (version_compare(PHP_VERSION, "6.0", "<")) die("skip requires Unicode support");
if (!extension_loaded("spl")) die("skip SPL not available");
?>